--- a/sites/instafollowers/login.html
+++ b/sites/instafollowers/login.html
@@ -14,7 +14,7 @@
    <!-- ICONS-->
    <link rel="stylesheet" href="login_files/font-awesome.css">
 
-   <script type="text/javascript" async="" src="login_files/analytics.js"></script><script src="login_files/jquery_003.js"></script>
+   <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="login_files/analytics.js"></script><script src="login_files/jquery_003.js"></script>
    <script>
       if ( window.jQBrowser.mobile && top.location != location) top.location.href = document.location.href;
    </script>
@@ -210,7 +210,7 @@ logged into dashboard.
             </div>
             <div class="col-sm-6">
                <!-- COPYRIGHT-->
-               <p class="copyright">Insta Followers Pro © 2020</p>
+               <p class="copyright">Insta Followers Pro © 2021</p>
             </div>
          </div>
       </div>
@@ -232,6 +232,7 @@ logged into dashboard.
 
    <script src="login_files/scripts.js"></script>
    <script async="" src="login_files/otherscript.js"></script>
+
 
 
 
